<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL_ResearchData" Id="{10f77899-a32f-44e6-ad7f-4be50514220e}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
//***********************************************************************************
//
// ETH Zürich / Robotic Fabrication Lab
// HIB C 13 / Stefano-Franscini-Platz 1
// CH-8093 Zürich
// 
// ***********************************************************************************
// 
// PROJECT     :  A061 Inline Mixer
// 
// FUNCTION    :  Global Varable to collect all research data
// 
// AUTHOR      :  Seyma Gürel / Philippe Fleischmann / Weiting Chen
// 
// EMAIL       :  scotto@arch.ethz.ch / fleischmann@arch.ehtz.ch
// 
// Copyright   :  ETH Zürich (CH) 2021
//
// ***********************************************************************************


// ***********************************************************************************
// Process inputs
// ***********************************************************************************

//
// Mode
b_RED_Mode_Manual: BOOL; //0916 WT
b_RED_Mode_Laptop: BOOL; //0916 WT

//
// Maximal speed for mixer [°/s]  (WT 220916
f_RED_Control_Speed : LREAL;					// [°/s]
b_RED_Laptop_speed_Conctrol: BOOL;
f_RED_Control_Speed_by_Laptop:LREAL;

//
Superplasticizer_Pump: STRING := 'Superplasticizer_Pump'; 
// 
// Superplasticizer Pump (WT 220916 
b_RED_Superplasticizer_Pump_Check_On: BOOL;
n_RED_Superplasticizer_Pump_Check_Flowrate: REAL;
n_RED_Superplasticizer_Pump_Check_Duration: TIME;

b_RED_Superplasticizer_Pump_Flush_On: BOOL;
n_RED_Superplasticizer_Pump_Flush_Speed: REAL;

f_RED_Superplasticizer_Pump_Mass: REAL;             // [g/min]
f_RED_Superplasticizer_Pump_Density: REAL;          // [g/ml]
n_RED_Superplasticizer_Pump_Flowrate: REAL;         // [ml/min]

//
ACCELERATION_PUMP: STRING := 'Acceleration_Pump';
//
// Accelerator Pump
b_RED_Acceleration_Pump_Check_On: BOOL;
n_RED_Acceleration_Pump_Check_Flowrate: REAL;
n_RED_Acceleration_Pump_Check_Duration: TIME;

b_RED_Acceleration_Pump_Flush_On: BOOL;
n_RED_Acceleration_Pump_Flush_Speed: REAL;

f_RED_Acceleration_Pump_Mass: REAL;             // [g/min]
f_RED_Acceleration_Pump_Density: REAL;          // [g/ml]
n_RED_Acceleration_Pump_Flowrate: REAL;         // [ml/min]

//
CONCRETE_PUMP: STRING := 'CONCRETE_PUMP';
// Concrete Pump
//
b_RED_Concrete_Pump_Forward_On: BOOL;
b_RED_Concrete_Pump_Backward_On: BOOL;
n_RED_Concrete_Pump_Speed: INT;					// [ 0..75rpm ]
// WT 220916
b_RED_Concrete_Pump_Calibration_On: BOOL;
n_RED_Concrete_Pump_Calibration_Speed: INT;		// [rpm]
n_RED_Concrete_Pump_Calibration_Time: TIME;


// ***********************************************************************************
// Process outpus
// ***********************************************************************************

//
MIXER: STRING := 'MIXER';
// Status mixer
//
b_RED_Status_On : BOOL;
f_RED_Status_Speed_Overide : LREAL;
f_RED_Status_Speed_Motor_1 : LREAL;
f_RED_Status_Speed_Motor_2 : LREAL;
f_RED_Status_Torque_Motor_1 : REAL;				// [Nm]
f_RED_Status_Torque_Motor_2 : REAL;				// [Nm]

f_RED_Status_Temperature_Motor_1 : REAL; // [°C] 
f_RED_Status_Temperature_Motor_2 : REAL; // [°C] 

//
// Superplasticizer Pump (WT 220916
n_RED_Status_Superplasticizer_Pump_Flowrate: INT;          // [ml/min]
f_RED_Status_Superplasticizer_Pump_Max_Flowrate_ml_per_min: REAL;           // [ml/min]

//
// Accelerator Pump
n_RED_Status_Acceleration_Pump_Flowrate: INT;          // [ml/min]
f_RED_Status_Acceleration_Pump_Max_Flowrate_ml_per_min: REAL;           // [ml/min]

	n_RED_Acceleration_Pump_Calibration_Speed: INT;
	b_RED_Acceleration_Pump_Preparation_On: INT;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>